--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,10 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+byteorder = { version = "1.4.3", default-features = false }
 log = "0.4.14"
-uefi = { version = "0.8.0", features = ["alloc", "exts"] }
-uefi-services = "0.5.0"
+uefi = { git = "https://github.com/rust-osdev/uefi-rs", features = ["alloc", "exts"] }
+uefi-services = { git = "https://github.com/rust-osdev/uefi-rs" }
+
+[patch.crates-io]
+uefi = { git = "https://github.com/rust-osdev/uefi-rs" }
